--- a/Talentgrow/contactpage.html
+++ b/Talentgrow/contactpage.html
@@ -22,12 +22,29 @@
             margin: 0px;
             padding: 0px;
         }
+        ._btn_div a{
+            background-color: white;
+            border: none;
+            margin-right: 20px;
+            padding: 5px 15px;
+            border: 1px solid orangered;
+            border-radius: 5px;
+            color: orangered;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        ._btn_div a:hover {
+            background-color: orangered;
+            color: white;
+        }
+
     </style>
 </head>
 
 <body>
-    <div class="_btn_div text-end mb-3 mt-2">
-        <button>Home</button>
+    <div class="_btn_div text-end mb-3 mt-3">
+        <a href="index.html">Home</a>
     </div>
 
     <div class="container-fluid">
